compiler/tests/ar/errors/const_index_write.salam
// لغة: العربية
// توقع: E013
دالة الرئيسية:
    ثابت ث := [1, 2, 3] بوصفه صحيح[3]
    ث[0] = 9
نهاية
